# creatimation

./: .env.example  .gitignore  AGENTIC_SYSTEM_DESIGN.md  CLI_REFERENCE.md  CREWAI_CAMPAIGN_MONITOR_AGENT.md  QUICK_REF.md  README.md  REPOSITORY_METADATA.md  SETUP.md  creatimation  debug_agent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
brand-guides/: cleanwave_blue.yml  lifestyle_green.yml  minimal_blue.yml  vibrant_red.yml
briefs/: CleanWaveSpring2025.json  CleanWaveSpring2025_Concise.json  CleanWaveSpring2025_Demo.json  CleanWaveSpring2026.json  CleanWaveWithImages.json  SpringRefreshCampaign.json  SpringRefreshCampaign_Enhanced.json
docs/: SETUP.md
s3_migration_plan/: S3_INTEGRATION.md  migrate_folder_structure.py  s3_integration_examples.py  semantic_asset_integration_example.py
semantic_asset_output_s3_prod_design/: S3_QUICKSTART.md  s3_integration_examples.py  semantic_asset_integration_example.py
src/: background_remover.py  brand_guide_loader.py  cache_manager.py  cache_manager_enhanced.py  cache_manager_s3.py  campaign_variant_generator.py  cli.py  cli_backup.py  cli_optimized.py  cli_s3.py  compositor.py  config.py  container.py  creative_automation_agent.py  crewai_creative_agent.py  enhanced_brief_loader.py  enhanced_output_manager.py  gemini_image_generator.py  image_generator.py.old  image_processor.py  layout_intelligence.py  main.py  output_manager.py  s3_migration.py  s3_storage_manager.py  state_tracker.py  text_variant_engine.py
src/cli/: __init__.py  constants.py  core.py  main.py
src/cli/commands/: __init__.py  cache.py  config.py  generate.py  validate.py  workspace.py
src/cli/plugins/: __init__.py
src/cli/plugins/builtin/: __init__.py  analytics.py
src/cli/utils/: __init__.py  output.py  workspace.py
src/core/: __init__.py  interfaces.py  models.py
src/managers/: __init__.py  cache_manager.py  output_manager.py
src/pipeline/: __init__.py  creative_pipeline.py
tests/: conftest.py  test_agent.py  test_agent.py.backup  test_cache_manager_semantic.py  test_cli_core.py  test_cli_integration.py  test_cli_output.py  test_cli_plugins.py  test_commands.py  test_composition.py  test_config.py  test_container.py  test_e2e_pipeline.py  test_enhanced_brief_loader.py  test_error_handling.py  test_integration_with_api.py  test_pipeline.py  test_pods_caching.py  test_s3_integration.py  test_s3_integration.py.bak
